10247
Unfortunately, this is a "feature" known as automatic argument list tupling. The lack of safety is discussed in scala/bug#3583.

I recommend compiling with `-Yno-adapted-args` or at least `-Ywarn-adapted-args. The latter is part of the option set `-Xlint`.
```
src/main/scala/com/foo/TimeSlot.scala:9: warning: No automatic adaptation here: use explicit parentheses.
        signature: Interval(x$1: Any): org.joda.time.Interval
  given arguments: <none>
 after adaptation: new Interval((): Unit)
  val nullSlot = new TimeSlot(new Interval())
                              ^
src/main/scala/com/foo/TimeSlot.scala:9: error: not enough arguments for constructor Interval: (x$1: Any)org.joda.time.Interval.
Unspecified value parameter x$1.
  val nullSlot = new TimeSlot(new Interval())
                              ^
```
